<resources>
    <string name="app_name">Briefer</string>
    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_confirm_password">Confirmar senha</string>

    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_up">Cadastre-se</string>
    <string name="action_sign_in_short">Entar</string>
    <string name="error_invalid_email">Esse e-mail é inválido</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Preencha esse campo</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_sign_up"><u>Cadastre-se</u></string>
    <string name="title_activity_signup">Cadastre-se</string>
    <string name="title_activity_menu">Briefer</string>
    <string name="title_home">Home</string>
    <string name="title_new_briefing">Novo Briefing</string>
    <string name="title_profile">Perfil</string>
    <string name="prompt_nb_proj_title">Titulo do Projeto</string>
    <string name="action_new_briefing">Criar novo Briefing</string>
    <string name="prompt_nb_cl_name">Nome do Cliente</string>
    <string name="prompt_nb_cl_phone">Telefone do Cliente</string>
    <string name="prompt_nb_cl_email">Email do Cliente</string>
    <string name="prompt_nb_examples">Sites/Apps de exemplo ou semelhantes</string>
    <string name="prompt_nb_num_pages">Número de Páginas/Telas do site/app</string>
    <string name="prompt_nb_social">Mídias Sociais do projeto</string>
    <string name="prompt_nb_outline">Por que criar esse projeto? Quais são as suas necessidades?</string>
    <string name="prompt_nb_objective">Qual o objetivo do projeto?</string>
    <string name="prompt_nb_description">Descreva o projeto detalhadamente</string>
    <string name="prompt_nb_features">Quais são as características do projeto?</string>
    <string name="prompt_nb_has_visual">Possui identidade visual.</string>
    <string name="prompt_nb_has_logo">Possui uma logo definida.</string>
    <string name="prompt_nb_has_current">Já possui um site para fazer redesign/manutenção.</string>
    <string name="prompt_nb_time_goal">Qual o prazo final para o projeto?</string>
    <string name="prompt_nb_cost">Custo</string>
    <string name="prompt_su_name">Nome</string>
    <string name="label_sign_up">Cadastre-se Gratuitamente</string>
    <string name="briefer_logo_description">Briefer Logo</string>
    <string name="label_profile_name">Nome: </string>
    <string name="label_profile_example">Example</string>
    <string name="label_profile_email">Email: </string>
    <string name="label_profile_email_example">example@email.com</string>
    <string name="label_action_logou">Sair</string>
    <string name="label_action_edit_profile">Editar Perfil</string>
    <string name="label_my_profile">Meu Perfil</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="briefing_cl_name">Cliente:</string>
    <string name="briefing_cl_phone">Telefone do Cliente:</string>
    <string name="briefing_cl_email">Email do Cliente:</string>
    <string name="briefing_examples">Sites/apps de exemplo:</string>
    <string name="briefing_num_pages">Numero de Páginas/Telas do projeto:</string>
    <string name="briefing_social_media">Mídias Sociais do projeto:</string>
    <string name="briefing_outline">Por que criar esse projeto?</string>
    <string name="briefing_description">Descrição do projeto:</string>
    <string name="briefing_has_visual">Possui identidade visual?</string>
    <string name="briefing_has_logo">Possui identidade logo?</string>
    <string name="briefing_has_current">Possui um site para fazer redesing/manutenção?</string>
    <string name="briefing_features">Principais características do projeto:</string>
    <string name="briefing_time_goal">Prazo final do projeto:</string>
    <string name="briefing_cost">Custo do projeto:</string>
    <string name="label_edit_profile">Editar Perfil</string>
    <string name="label_edit_profile_save">Salvar</string>
    <string name="label_edit_briefing">Editar Briefing</string>
    <string name="action_edit_briefing">Salvar</string>
    <string name="label_proj_title">Titulo do Projeto:</string>
    <string name="label_cl_name">Nome do Cliente:</string>
    <string name="label_cl_phone">Telefone do Cleinte:</string>
    <string name="label_cl_email">Email do Cliente:</string>
    <string name="label_examples">Sites/Apps de exemplo:</string>
    <string name="label_num_pages">Número de Páginas/Telas do projeto:</string>
    <string name="label_social_media">Mídias Sociais do Projeto:</string>
    <string name="label_outline">Por que criar esse projeto? Quais são as suas necessidades?:</string>
    <string name="label_objective">Qual o objetivo do projeto?</string>
    <string name="label_description">Descreva o projeto detalhadamente:</string>
    <string name="label_features">Quais são as características do projeto?</string>
    <string name="label_time_goal">Qual o prazo final para o projeto?</string>
    <string name="label_cost">Custo:</string>
    <string name="label_name">Nome:</string>
    <string name="label_email">Email:</string>
    <string name="label_password">Senha (opcional):</string>
    <string name="label_confirm_password">Confirmar Senha (opcional):</string>
    <string name="label_old_password">Senha antiga(opcional)</string>
    <string name="prompt_old_password">Senha antiga</string>
    <string name="label_su_confirm_password">Confirmar Senha:</string>
    <string name="label_su_password">Senha:</string>
    <string name="list_briefing_cl_phone">Telefone:</string>
    <string name="list_briefing_cl_name">Cliente:</string>
    <string name="list_briefing_time_goal">Prazo:</string>
    <string name="list_briefing_cost">Custo:</string>
    <string name="list_briefing_description">Descrição:</string>
    <string name="description_briefer_logo">Briefer Logo</string>
    <string name="search_field">Pesquisar</string>
    <string name="prompt_new_password">Senha Nova</string>
    <string name="label_new_password">Senha nova: (opcional)</string>
</resources>
