<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditBriefingActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_edit_briefing"
            android:textSize="24sp"
            android:layout_gravity="center"/>

        <!--TextViews for the form-->
        <EditText
            android:id="@+id/edit_briefing_proj_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nb_proj_title"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="@string/prompt_nb_proj_title"
            android:inputType="text"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/edit_briefing_cl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nb_cl_name"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="@string/prompt_nb_cl_name"
            tools:ignore="UnusedAttribute"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_briefing_cl_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nb_cl_phone"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="@string/prompt_nb_cl_phone"
            tools:ignore="UnusedAttribute"
            android:inputType="phone" />

        <EditText
            android:id="@+id/edit_briefing_cl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nb_cl_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="@string/prompt_nb_cl_email"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/edit_briefing_examples"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nb_examples"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="@string/prompt_nb_examples"
            android:inputType="text"
            tools:ignore="UnusedAttribute" />


        <EditText
            android:id="@+id/edit_briefing_num_pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nb_num_pages"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="@string/prompt_nb_num_pages"
            tools:ignore="UnusedAttribute"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_briefing_social_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nb_social"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="@string/prompt_nb_social"
            tools:ignore="UnusedAttribute"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_briefing_outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nb_outline"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="@string/prompt_nb_outline"
            tools:ignore="UnusedAttribute"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_briefing_objective"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nb_objective"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="@string/prompt_nb_objective"
            tools:ignore="UnusedAttribute"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_briefing_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nb_description"
            android:maxLines="4"
            android:minLines="4"
            android:singleLine="false"
            android:autofillHints="@string/prompt_nb_description"
            tools:ignore="UnusedAttribute"
            android:inputType="text" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/edit_briefing_tag_features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.chip.ChipGroup>
        <EditText
            android:id="@+id/edit_briefing_features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nb_features"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="@string/prompt_nb_features"
            tools:ignore="UnusedAttribute"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/edit_briefing_has_visual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_nb_has_visual"/>

        <CheckBox
            android:id="@+id/edit_briefing_has_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_nb_has_logo"/>

        <CheckBox
            android:id="@+id/edit_briefing_has_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_nb_has_current"/>

        <EditText
            android:id="@+id/edit_briefing_time_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nb_time_goal"
            android:inputType="none"
            android:focusable="false"
            android:autofillHints="@string/prompt_nb_time_goal"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/edit_briefing_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nb_cost"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="@string/prompt_nb_cost"
            android:inputType="numberDecimal"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/edit_briefing_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_edit_briefing"
            android:background="#24527a"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>